# pruvdrop

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
app/: .env.example  README.md  campaign-x.example.json  campaign.example.json  package.json  tsconfig.json  tweets.example.json
app/api/: validate.js
app/portal/: README.md  claims.json  config.example.json  config.json  index.html
app/src/: allocate.ts  build-campaign.ts  claim-tree.ts  commit.ts  demo-full.ts  gen-vector.ts  ingest-x.ts  ingest.ts  lottery-e2e.live-test.ts  lottery-e2e.ts  mk-mock-snapshot.ts  portal-claim.live-test.ts  run-allocate.ts  run-campaign-x.ts  run-campaign.ts  run-claimtree.ts  run-leaderboard.ts  run-portal.ts  score.ts  selftest-allocate.ts  selftest-claim.ts  selftest-x.ts  selftest.ts  snapshot.ts  types.ts
app/submit/: README.md  index.html
docs/: ZK-ALLOCATION-PROOF.md
programs/viral-airdrop-claim/: Cargo.toml
programs/viral-airdrop-claim/src/: lib.rs
prover/: Cargo.toml  README.md  sample-allocation-input.json
prover/src/: claimtree.rs  combined.rs  lottery.rs  main.rs  merkle.rs  payout.rs  poseidon.rs  proportional.rs  selection.rs  tiebreak.rs  topn.rs
tests/: viral-airdrop-claim.test.ts
web/: next.config.mjs  package-lock.json  package.json
web/app/: Countdown.tsx  Footer.tsx  Header.tsx  Providers.tsx  ThemeToggle.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/claim/: page.tsx
web/app/faq/: page.tsx
web/app/leaderboard/: page.tsx
web/lib/: claim.ts  sim.ts  tweet.ts  wallet.ts
web/public/: allocation-proof.json  config.json  leaderboard.json  submit-config.json
(+8 files in other folders)
