[package]
name = "pruvdrop-prover"
version = "0.1.0"
edition = "2021"
description = "Phase-1 ZK inclusion prover for pruvdrop, built on PRUV's Halo2 circuits"

[[bin]]
name = "pruvdrop-prover"
path = "src/main.rs"

[dependencies]
# PRUV's production Halo2 KZG/BN254 circuits.
# Local dev: path to a side-by-side checkout of the private pruv repo.
# CI / operators: switch to the git form with a read-only deploy key.
pruv-circuits = { path = "../../pruv-solana-main/circuits" }
# pruv-circuits = { git = "ssh://git@github.com/pruvnetwork/pruv", branch = "main" }

# Same halo2 the circuits use (Fr type + field ops). Same git+branch → Cargo unifies
# it with pruv-circuits' copy, so the Fr types match.
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", branch = "main" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
