[package]
name = "viral-airdrop-claim"
version = "0.1.0"
edition = "2021"
description = "Verifiable viral airdrop — Merkle-drop claim with per-recipient nullifier (PRUV)"

[lib]
crate-type = ["cdylib", "lib"]
name = "viral_airdrop_claim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
